<resources>
    <string name="app_name">Tamil sounds</string>
    <string name="animals">Animals</string>
    <string name="birds">Birds</string>
    <string name="places">Places</string>
    <string name="fruits">Fruits</string>
    <string name="tamil_words">Tamil words</string>
    <string name="bear">Bear</string>
    <string name="lion">Lion</string>
    <string name="bison">Bison</string>
    <string name="rhino">Rhino</string>
</resources>