<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg1"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="cursive"
        android:text="@string/tamil_words"
        android:textColor="#950A00"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/animals"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="42dp"
        android:onClick="Page2"
        android:text="@string/animals"
        android:textColor="#FFEB3B"
        app:layout_constraintBottom_toTopOf="@+id/birds"
        app:layout_constraintStart_toStartOf="@+id/birds" />

    <Button
        android:id="@+id/birds"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginBottom="40dp"
        android:text="@string/birds"
        android:textColor="#FFEB3B"
        app:layout_constraintBottom_toTopOf="@+id/places"
        app:layout_constraintEnd_toEndOf="@+id/places" />

    <Button
        android:id="@+id/places"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginStart="144dp"
        android:layout_marginBottom="46dp"
        android:text="@string/places"
        android:textColor="#FFEB3B"
        app:layout_constraintBottom_toTopOf="@+id/fruits"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/fruits"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginStart="3dp"
        android:layout_marginBottom="74dp"
        android:text="@string/fruits"
        android:textColor="#FFEB3B"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/places" />

</androidx.constraintlayout.widget.ConstraintLayout>