<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="451dp"
        android:layout_height="0dp"
        android:layout_marginEnd="58dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bison"
        app:srcCompat="@drawable/animals2"
        android:contentDescription="TODO" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="212dp"
        android:layout_height="0dp"
        android:layout_marginEnd="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rhino"
        app:srcCompat="@drawable/animals"
        android:contentDescription="TODO" />

    <Button
        android:id="@+id/bear"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="143dp"
        android:layout_marginBottom="224dp"
        android:text="@string/bear"
        app:layout_constraintBottom_toTopOf="@+id/bison"
        app:layout_constraintEnd_toStartOf="@+id/lion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView14" />

    <Button
        android:id="@+id/lion"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="224dp"
        android:text="@string/lion"
        app:layout_constraintBottom_toTopOf="@+id/rhino"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bear"
        app:layout_constraintTop_toBottomOf="@+id/imageView15" />

    <Button
        android:id="@+id/bison"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="99dp"
        android:layout_marginBottom="85dp"
        android:text="@string/bison"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toStartOf="@+id/imageView17"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bear" />

    <Button
        android:id="@+id/rhino"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginEnd="37dp"
        android:layout_marginBottom="92dp"
        android:text="@string/rhino"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView16"
        app:layout_constraintTop_toBottomOf="@+id/lion" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="96dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="Wild Bear"
        app:layout_constraintBottom_toTopOf="@+id/bear"
        app:layout_constraintEnd_toStartOf="@+id/imageView15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bear" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="12dp"
        android:contentDescription="Wild Lion"
        app:layout_constraintBottom_toTopOf="@+id/lion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView14"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/lion" />

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="0dp"
        android:layout_height="186dp"
        android:layout_marginEnd="100dp"
        android:contentDescription="Wild Bison"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/rhino"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bison" />

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="0dp"
        android:layout_height="193dp"
        android:contentDescription="Wild Rhino"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bison"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/rhino" />

</androidx.constraintlayout.widget.ConstraintLayout>